buildscript {
    repositories {
        maven { url = 'https://maven.minecraftforge.net' }
        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
        maven { url = 'https://maven.parchmentmc.org' }
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
        classpath 'org.parchmentmc:librarian:1.+'
    }
}

apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'org.parchmentmc.librarian.forgegradle'
apply plugin: 'eclipse'
apply plugin: 'maven-publish'
apply plugin: 'org.spongepowered.mixin'

mixin {
    add sourceSets.main, "oniutils.refmap.json"
}

version = "${version}"
group = 'wintersteve25.oniutils' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
archivesBaseName = 'oniutils'

// Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
java.toolchain.languageVersion = JavaLanguageVersion.of(17)

println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
minecraft {
    mappings channel: "parchment", version: "2022.05.02-1.18.2"

    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        client {
            workingDirectory project.file('run')
            arg "-mixin.config="+modid+".mixins.json"
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${project.projectDir}/build/createSrgToMcp/output.srg"
            mods {
                oniutils {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')
            arg "-mixin.config="+modid+".mixins.json"
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${project.projectDir}/build/createSrgToMcp/output.srg"

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            mods {
                oniutils {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            args '--mod', 'oniutils', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')

            mods {
                oniutils {
                    source sourceSets.main
                }
            }
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources {
    srcDir 'src/generated/resources'
}

repositories {
    // ct
    maven {
        url "https://maven.blamejared.com"
    }

    // jei
    maven {
        url "https://dvs1.progwml6.com/files/maven"
    }

    // top
    maven {
        url "https://maven.k-4u.nl/"
    }

    // geckolib
    maven {
        url "https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/"
    }

    // pmmo, corpse
    maven {
        url "https://www.cursemaven.com"
    }

    // mekanism
    maven {
        url "https://modmaven.dev/"
    }

    // curios
    maven {
        url "https://maven.theillusivec4.top/"
    }
}

dependencies {
    // forge
    minecraft 'net.minecraftforge:forge:1.18.2-40.0.45'

    // ct
    implementation fg.deobf("com.blamejared.crafttweaker:CraftTweaker-forge-1.18.2:${ct_version}")

    // jei
    runtimeOnly fg.deobf("mezz.jei:jei-${jei_version}")
    compileOnly fg.deobf("mezz.jei:jei-${jei_version}:api")

    // top
    implementation fg.deobf(project.dependencies.create("mcjty.theoneprobe:theoneprobe:${top_version}") {
        transitive = false
    })

    // geckolib
    implementation fg.deobf("software.bernie.geckolib:geckolib-${geckolib_version}")

    // pmmo
    implementation fg.deobf ("curse.maven:pmmo-353935:${pmmo_version}")

    // corpse
    implementation fg.deobf ("curse.maven:corpse-316582:${corpse_version}")

    // mekanism
    implementation fg.deobf ("mekanism:Mekanism:${mekanism_version}:api")
    implementation fg.deobf ("mekanism:Mekanism:${mekanism_version}")

    // curios
    runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
    compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}:api")

    annotationProcessor ("org.spongepowered:mixin:0.8.5:processor")
}

// Example for how to get properties into the manifest for reading by the runtime..
jar {
    manifest {
        attributes([
                "Specification-Title": "ONIUtils",
                "Specification-Vendor": "oniutilssareus",
                "Specification-Version": "${version}", // We are version 1 of ourselves
                "Implementation-Title": project.name,
                "Implementation-Version": "${version}",
                "Implementation-Vendor" :"oniutilssareus",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                "MixinConfigs": "${modid}.mixins.json"
        ])
    }
}

// Example configuration to allow publishing using the maven-publish task
// This is the preferred method to reobfuscate your jar file
jar.finalizedBy('reobfJar')
// However if you are in a multi-project build, dev time needs unobfed jar files, so you can delay the obfuscation until publishing by doing
//publish.dependsOn('reobfJar')

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file:///${project.projectDir}/mcmodsrepo"
        }
    }
}